<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >

    <CheckBox
        android:id="@+id/show_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_date" />

    <CheckBox
        android:id="@+id/show_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_month" />

    <CheckBox
        android:id="@+id/show_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_year" />

    <CheckBox
        android:id="@+id/show_month_as_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_month_as_number" />

    <CheckBox
        android:id="@+id/show_slash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_slash" />

    <CheckBox
        android:id="@+id/show_before_clock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_before_clock" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply" 
        android:onClick="apply"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xda"
        android:onClick="xda" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/more"
        android:onClick="more" />

</TableLayout>
